Add support for parallel steps
