# backend/docs/swagger.json
@@ -1589,6 +1589,12 @@
                 "command": {
                     "type": "string"
                 },
+                "depends_on_node_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "error_message": {
                     "type": "string"
                 },
@@ -1598,6 +1604,9 @@
                 "finished_at": {
                     "type": "string"
                 },
+                "group_name": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -1605,6 +1614,9 @@
                     "$ref": "#/definitions/api.ExecutionJobResponse"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "node_id": {
                     "type": "string"
                 },
                 "started_at": {
@@ -1866,6 +1878,12 @@
                 "created_at": {
                     "type": "string"
                 },
+                "depends_on_node_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "environment": {
                     "type": "object",
                     "additionalProperties": {
@@ -1878,6 +1896,9 @@
                 "finished_at": {
                     "type": "string"
                 },
+                "group_name": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -1888,6 +1909,9 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "node_id": {
                     "type": "string"
                 },
                 "outputs": {
